--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "metro-react-native-babel-preset": "0.51.1",
     "react-test-renderer": "16.6.3"
   },
+  "peerDependencies": {
+    "react": "16.6.3",
+    "react-native": "0.57.8"
+  },
   "jest": {
     "preset": "react-native"
   }
